# substrate

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  gcovr.cfg  meson.build  meson_options.txt  runClangTidy.py
.github/: installCoverity.sh
.github/workflows/: codeql.yml  coverage.yml  coverity.yml  workflow.yml
docs/: Doxyfile.in  meson.build
impl/: affinity.cxx  console.cxx  hash.cxx  meson.build  pty.cxx  socket.cxx  substrate.rc.in  thread.cxx  utility.cxx
impl/command_line/: arguments.cxx  meson.build  options.cxx  tokeniser.cxx
lgtm/cpp-queries/: const-cast.ql
substrate/: affinity  bitfield  bits  bounded_iterator  buffer_utils  console  conversions  enum_utils  fd  file_utils  fixed_vector  flags  flex_struct  hash  index_sequence  indexed_iterator  iteration_range  iterator  latch  managed_ptr  memfd  meson.build  mmap  pipe  pointer_utils  prng  promotion_helpers  pty  rwlock  socket  span  static_vector  string  thread  thread_pool  threaded_queue  units  utility  zip_container
substrate/advanced/: fd  guard_page  io
substrate/command_line/: arguments  options  tokeniser
substrate/crypto/: sha256  sha512  twofish
substrate/internal/: cxx11_compat  defs  export_control  fd_compat  libressl_wrapper  tls_dummy  tls_wrapper  types
test/: affinity.cxx  bits.cxx  bounded_iterator.cxx  buffer_utils.cxx  console.cxx  conversions.cxx  enum_utils.cxx  fd.cxx  file_utils.cxx  fixed_vector.cxx  hash.cxx  index_sequence.cxx  indexed_iterator.cxx  managed_ptr.cxx  memfd.cxx  meson.build  mmap.cxx  pointer_utils.cxx  prng.cxx  socket.cxx  span.cxx  string.cxx  test.cxx  thread_pool.cxx  threaded_queue.cxx  units.cxx  utility.cxx  zip_container.cxx
test/advanced/: fd.cxx
test/command_line/: arguments.cxx  options.cxx  tokeniser.cxx
test/crypto/: sha256.cxx  sha512.cxx  twofish.cxx
